--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -5,7 +5,7 @@
       </button>
       <span>Our Properties</span>
       <span class="example-spacer"></span>
-      <button type="button" class="btn btn-success">Add List</button>
+      <button type="button" class="btn btn-success"  data-bs-toggle="modal" data-bs-target="#exampleModal">Add List</button>
       <button type="button" class="btn btn-danger mx-3">Logout</button>
     </mat-toolbar>
   </p>
@@ -45,3 +45,23 @@
     </tbody>
   </table>
   
+
+
+  <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Property Record Form</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...cdsfdvfsfdcxvfbsfbvcvdvd
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
